--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "pandas>=2.3.2",
     "pydantic-ai>=1.0.10",
     "python-dotenv>=1.1.1",
+    "tenacity>=8.0.0",
+    "tqdm>=4.66.0",
+    "xlsxwriter>=3.2.9",
 ]
 
 [project.scripts]
